fix: card stretch

--- a/client/src/components/css/Appbar.css
+++ b/client/src/components/css/Appbar.css
@@ -17,7 +17,7 @@
     background-color:#DADADA !important ;
     color: black !important;
 }
-.login-btn:hover{
+/* .login-btn:hover{
     background-color: white !important;
     color: black !important;
-}
+} */
