--- a/client/src/components/css/Card.css
+++ b/client/src/components/css/Card.css
@@ -34,3 +34,7 @@
     padding-left: 8px;
     margin-top: 8px;
 }
+.price{
+    padding-left: 10px;
+    color: #212121 ;
+}
